--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
     <h2 id="Photos">Photos:</h2>
     <div class="grid-container" id="finalgrid">
         <div class="grid-item">
-            <img src="Hydra.JPG" alt="View of mountains from a plane">
+            <img src="Hydra.JPG" alt="Hydra Vulgaris on the side of a well plate.">
             <p>HYDRA VULGARIS!! 🔬</p>
         </div>
         <div class="grid-item">
-            <img src="Flowers.jpg" alt="View of mountains from a plane">
+            <img src="Flowers.jpg" alt="Flowers floating in water">
             <p>Some nice flowers 🌸</p>
         </div>
         <div class="grid-item">
-            <img src="ViewFromAscend.JPG" alt="View of mountains from a plane">
+            <img src="ViewFromAscend.jpg" alt="Palm tree scenery">
             <p>View From Ascend!! 🚀</p>
         </div>
         <div class="grid-item">
-            <img src="PlaneView.JPG" alt="View of mountains from a plane">
+            <img src="PlaneView.jpg" alt="View of mountains from a plane">
             <p>View of mountains  ✈️</p>
         </div>
     </div>
