--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
-
+        <link rel="icon" type="image/x-icon" href="LC.png">
         <link rel="stylesheet" href="personalWebsite.css">
     </header>
     <body>
