--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
         <link rel="icon" type="image/x-icon" href="LC.png">
         <link rel="stylesheet" href="personalWebsite.css">
-    </header>
+    </head>
     <body>
 
     <div class="typing-effect">
