--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
-        <link rel="icon" href="LC.png" type="image/png">
-        <link rel="icon" sizes="32x32" href="LC.png">
-        <link rel="icon" sizes="16x16" href="LC.png">
+        <link rel="icon" href="LCfavicon.ico" type="image/png">
+        <link rel="icon" sizes="32x32" href="LCfavicon.ico">
+        <link rel="icon" sizes="16x16" href="LCfavicon.ico">
         <link rel="stylesheet" href="personalWebsite.css">
     </head>
     <body>
