--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
-
+        <link rel="icon" href="images/LCfavicon.ico">
         <link rel="stylesheet" href="personalWebsite.css">
-    </header>
+    </head>
     <body>
 
     <div class="typing-effect">
@@ -23,7 +23,7 @@
       </nav>
 
       <div class="hover-effect">
-        <a href="https://github.com/lycheegreentea"><img src="GitHubLogo.png" alt="Github Logo" id="catlogo"></a>
+        <a href="https://github.com/lycheegreentea"><img src="images/GitHubLogo.png" alt="Github Logo" id="catlogo"></a>
         </div>
 
     <hr style="width:100%;height:2px;border-width:0;background-color:rgb(36, 0, 61)">    
@@ -53,25 +53,25 @@
     <h2 id="Photos">Photos:</h2>
     <div class="grid-container" id="finalgrid">
         <div class="grid-item">
-            <img src="Hydra.JPG" alt="View of mountains from a plane">
+            <img src="images/Hydra.JPG" alt="Hydra Vulgaris on the side of a well plate.">
             <p>HYDRA VULGARIS!! 🔬</p>
         </div>
         <div class="grid-item">
-            <img src="Flowers.jpg" alt="View of mountains from a plane">
+            <img src="images/Flowers.jpg" alt="Flowers floating in water">
             <p>Some nice flowers 🌸</p>
         </div>
         <div class="grid-item">
-            <img src="ViewFromAscend.JPG" alt="View of mountains from a plane">
+            <img src="images/ViewFromAscend.jpg" alt="Palm tree scenery">
             <p>View From Ascend!! 🚀</p>
         </div>
         <div class="grid-item">
-            <img src="PlaneView.JPG" alt="View of mountains from a plane">
+            <img src="images/PlaneView.jpg" alt="View of mountains from a plane">
             <p>View of mountains  ✈️</p>
         </div>
     </div>
 
     <audio id="audioPlayer" loop>
-        <source src="sweetcafe.mp3" type="audio/mp3">
+        <source src="sound/sweetcafe.mp3" type="audio/mp3">
     </audio>
 
     <div id="playerUI">
@@ -101,4 +101,3 @@
 </body>
 
 </html>
-
