modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
-        <link rel="icon" href="images/LCfavicon.ico">
+        <link rel="icon" href="./images/LCfavicon.ico">
         <link rel="stylesheet" href="personalWebsite.css">
     </head>
     <body>
