modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
         <link rel="icon" href="./images/LCfavicon.ico">
+        <link rel="icon" href="images/LCfavicon.ico" sizes="16x16">
         <link rel="stylesheet" href="personalWebsite.css">
     </head>
     <body>
