--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 </a>
             </div>
             <div class="grid-item">
+                <a href="https://github.com/lycheegreentea/Erythrocyte">
+                <p>Erythrocyte:A 3D interactive(use arrow keys) website that models red blood cells and provides information on them. Created using HTML and AFrame.</p>
+                </a>
+            </div>
+            <div class="grid-item">
                 <p>More to come...</p>
             </div>
 
