modified:   index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="https://github.com/lycheegreentea/Erythrocyte">
+                <a href="https://lycheegreentea.github.io/Erythrocyte/">
                 <p>Erythrocyte:A 3D interactive(use arrow keys) website that models red blood cells and provides information on them. Created using HTML and AFrame.</p>
                 </a>
             </div>
