new file:   images/qr.png modified:   index.html modified:   personalWebsite.css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 </a>
             </div>
             <div class="grid-item">
+                <a href="https://github.com/lycheegreentea/PigeonFactGeneratorQR">
+                <p>PigeonFact:A pigeon fact generator made in HTML, JS, CSS that fits in a QR code and can be scanned!</p>
+                </a>
+                <img src="images/qr.png"; id="qr">
+            </div>
+            <div class="grid-item">
                 <p>More to come...</p>
             </div>
 
