--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
             </div>
             <div class="grid-item">
                 <a href="https://github.com/lycheegreentea/PigeonFactGeneratorQR">
-                <p>PigeonFact:A pigeon fact generator made in HTML, JS, CSS that fits in a QR code and can be scanned!</p>
+                <p>PigeonFact:A pigeon fact generator made in HTML, JS, CSS that fits in a QR code and can be scanned! QR code can be found on github.</p>
                 </a>
-                <img src="images/qr.png"; id="qr">
             </div>
             <div class="grid-item">
                 <p>More to come...</p>
