Fixed typewriter effect for safari

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
 
-    <div class="typing-effect">
-        <span style="--i:1">L</span><span style="--i:2">a</span><span style="--i:3">u</span><span style="--i:4">r</span><span style="--i:5">e</span><span style="--i:6">n</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span style="--i:7">C</span><span style="--i:8">h</span><span style="--i:9">e</span><span style="--i:10">n</span>
+    <div class="typewriter-wrapper">
+        <div class="typewriter">Lauren Chen</div>
     </div>
+
 
     <nav class = "navbar">
         <ul>
