--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <hr style="width:100%;height:2px;border-width:0;background-color:rgb(36, 0, 61)">    
     <div class ="Projects">
-
+    <p>For inquiries about Reverie App please contact laurenkchen@gmail.com </p>
     <p id="intro">Hi! I'm passionate about coding and making cool projects and I hope you enjoy my website! </p>
     <hr style="width:100%;height:2px;border-width:0;background-color:rgb(36, 0, 61)"> 
         <h2 id="Projects">Projects-hyperlinked:</h2>
