--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 
     <hr style="width:100%;height:2px;border-width:0;background-color:rgb(36, 0, 61)">    
     <div class ="Projects">
-    <p>For inquiries about Reverie App please contact laurenkchen@gmail.com </p>
-    <p>Privacy policy for Reverie app: no information is collected.</p>
 
     <p id="intro">Hi! I'm passionate about coding and making cool projects and I hope you enjoy my website! </p>
     <hr style="width:100%;height:2px;border-width:0;background-color:rgb(36, 0, 61)"> 
@@ -49,6 +47,11 @@
             <div class="grid-item">
                 <a href="https://github.com/lycheegreentea/PigeonFactGeneratorQR">
                 <p>PigeonFact:A pigeon fact generator made in HTML, JS, CSS that fits in a QR code and can be scanned! QR code can be found on github.</p>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="https://apps.apple.com/us/app/reverie-vocab-quotes/id6749515896">
+                <p>Reverie: a vocabulary and quotes app designed to keep students motivated and help them study vocabulary</p>
                 </a>
             </div>
             <div class="grid-item">
